--- a/1. Build a survey form/Index.html
+++ b/1. Build a survey form/Index.html
@@ -20,63 +20,62 @@
           <label class="block" id="number-label" for="number">Age(optional)
             <input class="block" id="number" type="number" min="18" max="120" placeholder="Age" /></label>
           <label class="block">Which option best describes your current role?
-            <select id="dropdown" class="block" >
-              <option value="">Select current role</option>
+            <select id="dropdown" class="block" placeholder="Select current role">
+              <option value="" selected disabled>Select current role</option>
               <option value="1">Student</option>
               <option value="2">Full Time Job</option>
               <option value="3">Full Time Learner</option>
               <option value="4">Prefer not to say</option>
               <option value="5">Other</option>
             </select>
-          </fieldset>
-          <fieldset>
-            <label class="block">Would you recommend freeCodeCamp to a friend?</label>
-            <label class="block" id="definitely-label" for="definitely" name="selection-label">
-              <input id="definitely" type="radio" name="referral" value="definitely" class="inline"/>Definitely</label>
-            <label class="block" id="maybe-label" for="maybe" name="selection-label">
-              <input id="maybe" type="radio" name="referral" value="maybe" class="inline"/>Maybe</label>
-            <label class="block" id="not-sure-label" for="not-sure" name="selection-label">
-              <input id="not-sure" type="radio" name="referral" value="not-sure" class="inline"/>Not sure</label>
-            <label class="block" for="feature-dropdown">What is your favorite feature of freeCodeCamp?
-              <select id="feature-dropdown" class="block">
-              <option value="">Select an option</option>
-              <option value="1">Challenges</option>
-              <option value="2">Projects</option>
-              <option value="3">Community</option>
-              <option value="4">Open Source</option>
-              </select>
-            </label>
-            <label>What would you like to see improved?</label>
-              <label class="emphasis">(Check all that apply)</label>
-              <label class="block" name="selection-label">
-              <input value="1" type="checkbox" class="inline"/> Front-End Projects</label>
-              <label class="block" name="selection-label">
-              <input value="2" type="checkbox" class="inline"/> Back-End Projects</label>
-              <label class="block" name="selection-label">
-              <input value="3" type="checkbox" class="inline"/> Data Visualization</label>
-              <label class="block" name="selection-label">
-              <input value="4" type="checkbox" class="inline"/> Challenges</label>
-              <label class="block" name="selection-label">
-              <input value="5" type="checkbox" class="inline"/> Open Source Community</label>
-              <label class="block" name="selection-label">
-              <input value="6" type="checkbox" class="inline"/> Gitter help rooms</label>
-              <label class="block" name="selection-label">
-              <input value="7" type="checkbox" class="inline"/> Videos</label>
-              <label class="block" name="selection-label">
-              <input value="8" type="checkbox" class="inline"/> City Meetups</label>
-              <label class="block" name="selection-label">
-              <input value="9" type="checkbox" class="inline"/> Wiki</label>
-              <label class="block" name="selection-label">
-              <input value="10" type="checkbox" class="inline"/> Forum</label>
-              <label class="block" name="selection-label">
-              <input value="11" type="checkbox" class="inline"/> Additional Courses</label>
-          </fieldset>
-          <fieldset>
-            <label for="comments">Any comments or suggestions?
-              <textarea id="comments" name="comments" rows="3" cols="30" placeholder="Enter your comments or suggestions here..." class="block"></textarea>
-              <input id="submit" type="submit" />
-          </fieldset>
-          
+          <label class="block">Would you recommend freeCodeCamp to a friend?</label>
+          <label class="block" id="definitely-label" for="definitely" name="selection-label">
+            <input id="definitely" type="radio" name="referral" value="definitely" class="inline" checked/>Definitely</label>
+          <label class="block" id="maybe-label" for="maybe" name="selection-label">
+            <input id="maybe" type="radio" name="referral" value="maybe" class="inline"/>Maybe</label>
+          <label class="block" id="not-sure-label" for="not-sure" name="selection-label">
+            <input id="not-sure" type="radio" name="referral" value="not-sure" class="inline"/>Not sure</label>
+        </fieldset>
+        <fieldset>
+          <label class="block" for="feature-dropdown">What is your favorite feature of freeCodeCamp?
+            <select id="feature-dropdown" class="block">
+            <option value="" disabled selected>Select an option</option>
+            <option value="1">Challenges</option>
+            <option value="2">Projects</option>
+            <option value="3">Community</option>
+            <option value="4">Open Source</option>
+            </select>
+          </label>
+        <label>What would you like to see improved?</label>
+          <label class="emphasis">(Check all that apply)</label>
+          <label class="block" name="selection-label">
+          <input value="1" type="checkbox" class="inline"/> Front-End Projects</label>
+          <label class="block" name="selection-label">
+          <input value="2" type="checkbox" class="inline"/> Back-End Projects</label>
+          <label class="block" name="selection-label">
+          <input value="3" type="checkbox" class="inline"/> Data Visualization</label>
+          <label class="block" name="selection-label">
+          <input value="4" type="checkbox" class="inline"/> Challenges</label>
+          <label class="block" name="selection-label">
+          <input value="5" type="checkbox" class="inline"/> Open Source Community</label>
+          <label class="block" name="selection-label">
+          <input value="6" type="checkbox" class="inline"/> Gitter help rooms</label>
+          <label class="block" name="selection-label">
+          <input value="7" type="checkbox" class="inline"/> Videos</label>
+          <label class="block" name="selection-label">
+          <input value="8" type="checkbox" class="inline"/> City Meetups</label>
+          <label class="block" name="selection-label">
+          <input value="9" type="checkbox" class="inline"/> Wiki</label>
+          <label class="block" name="selection-label">
+          <input value="10" type="checkbox" class="inline"/> Forum</label>
+          <label class="block" name="selection-label">
+          <input value="11" type="checkbox" class="inline"/> Additional Courses</label>
+        </fieldset>
+        <fieldset>
+          <label for="comments">Any comments or suggestions?
+            <textarea id="comments" name="comments" rows="3" cols="30" placeholder="Enter your comments or suggestions here..." class="block"></textarea>
+            <input id="submit" type="submit" /></label>
+        </fieldset> 
       </form>
     </div>
   </body>
